changed to condren

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
-	<title>Barth Sullivan Behr</title>
+	<title>Barth Condren</title>
 
 	<!-- Bootstrap core CSS -->
 
@@ -61,7 +61,7 @@
 
 			<div class="navbar-brand">
 
-				<a href="http://barthbehr.com/index.html"><img class="imagess" src="imgs/logo-no-address4.png" /></a>
+				<a href="http://barthcondren.com/index.html"><img class="imagess" src="imgs/logo-no-address4.png" /></a>
 
 			</div>
 
@@ -144,7 +144,7 @@
 
 			<h2>About Our Firm</h2>
 
-			<p>Founded in 1928 in Buffalo, New York, Barth Sullivan Behr has a long history of successfully defending insureds, insurers,
+			<p>Founded in 1928 in Buffalo, New York, Barth Condren has a long history of successfully defending insureds, insurers,
 				municipalities and self-insured companies in trial and appellate litigation, arbitrations and mediations across Central
 				and Western New York. We are wholly focused on providing the highest quality legal services to insurers and defendants
 				against civil claims, whether insured or self-insured, at competitive rates. We place a premium on client satisfaction
@@ -218,7 +218,7 @@
 
 
 
-		<p id="copy"> <a href="http://barthbehr.com/">&copy; Barth Sullivan Behr 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
+		<p id="copy"> <a href="http://barthcondren.com/">&copy; Barth Condren 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
 			Advertising
 		</p>
 
