--- a/attorneys.html
+++ b/attorneys.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="" />
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-	<title>Barth Sullivan Behr</title>
+	<title>Barth Condren</title>
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
 	<!-- Custom styles for this template -->
@@ -38,7 +38,7 @@
 		<nav class="navbar navbar-default" role="navigation">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-brand">
-				<a href="http://barthbehr.com/index.html"><img class="imagess" src="imgs/logo-no-address4.png" /></a>
+				<a href="http://barthcondren.com/index.html"><img class="imagess" src="imgs/logo-no-address4.png" /></a>
 			</div>
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -94,7 +94,7 @@
 			<h3> Partner </h3>
 			<p>Mr. Barth, grandson of the firm’s founder, is an experienced trial attorney who has tried cases for over twenty-five years.
 				After graduating from the State University of New York at Buffalo Law School, Mr. Barth served as one of the most successful
-				in-house trial attorneys at Fireman’s Fund Insurance Company. Since joining Barth Sullivan Behr in 1996, he has continued
+				in-house trial attorneys at Fireman’s Fund Insurance Company. Since joining Barth Condren in 1996, he has continued
 				to amass an impressive record of trial and appellate successes. Mr. Barth has been an active member of the Defense Research
 				Institute for many years and was nominated and approved for membership in the prestigious International Association of
 				Defense Counsel (IADC) in 2004. He continues to litigate regularly, specializing in motor vehicle and premises liability.</p>
@@ -137,59 +137,6 @@
 			</div>
 		</div>
 
-		<div class="col-md-2">
-			<img class="headshot" src="imgs/LDBw.jpg">
-		</div>
-		<div id="minheight" class="col-md-10">
-			<h2> Laurence D. Behr </h2>
-			<h3> Partner </h3>
-			<p>Graduated from the State University of New York at Buffalo, B.A. cum laude (1974), and J.D. magna cum laude (1981). Following
-				his two-year service as Confidential Law Clerk to the United States District Judge John T. Elfvin (Western District of
-				New York), Mr. Behr forged a distinguished career as a successful personal injury defense trial and appellate lawyer.
-				Mr. Behr held partnerships in two of Buffalo’s most respected insurance defense firms, the former Saperston & Day, P.C.
-				and Lustig & Brown LLP, prior to joining Barth Sullivan Behr in 1999. He has tried over thirty personal injury cases
-				to successful defense verdicts, and has published numerous leading articles on important and timely insurance law topics.</p>
-			<div class="row">
-				<div class="col-md-6">
-					<h4> Contact: </h4>
-					Buffalo Office </br>
-					367 Linwood Ave </br>
-					Buffalo, New York 14209</br>
-					(716) 856-1300</br>
-					<a href="mailto:lbehr@barthbehr.com">lbehr@barthbehr.com</a></br>
-				</div>
-				<div class="col-md-6">
-					<h4> Concentrations: </h4>
-					Insurance Coverage </br>
-					Premises, Motor Vehicle Liability </br>
-					Fire Loss Investigations and Defence </br>
-					Employment Discrimination </br>
-					Professional Liability </br>
-					Special Investigations </br>
-					Trial and Appellate Litigation </br>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<h4> Affiliations: </h4>
-					Buffalo Claims Association </br>
-					Erie County Bar Association </br>
-					National Lawyers Association </br>
-					Western New York Defense Trial Lawyers Association </br>
-				</div>
-				<div class="col-md-6">
-					<h4> Admissions: </h4>
-					State of New York </br>
-					U.S. District Court, Eastern District of New York </br>
-					U.S. District Court, Northern District of New York</br>
-					U.S. District Court, Western District of New York</br>
-					U.S. Court of Appeals, Second Circuit</br>
-					U.S. Supreme Court</br>
-				</div>
-			</div>
-
-		</div>
-
 		<div class="col-md-2"><img class="headshot" src="imgs/DPHw.jpg"></div>
 		<div id="minheight" class="col-md-10">
 			<h2> Douglas P. Hamberger </h2>
@@ -197,7 +144,7 @@
 			<p>Mr. Hamberger is a trial attorney with a wealth of experience, both civil and criminal, having tried cases for over thirty
 				years. Following graduation from the University of Miami School of Law, Mr. Hamberger practiced law in South Florida
 				before joining the Erie County District Attorney’s Office in Buffalo where he successfully tried in excess of five hundred
-				criminal cases. Since joining Barth Sullivan Behr in 2007, he continues to try cases on a regular basis and concentrates
+				criminal cases. Since joining Barth Condren in 2007, he continues to try cases on a regular basis and concentrates
 				his practice in the areas of motor vehicle liability, premises liability, toxic tort and labor law.</p>
 			<div class="row">
 				<div class="col-md-6">
@@ -327,7 +274,7 @@
 	<footer>
 		<div class="container">
 
-			<p id="copy"> <a href="http://barthbehr.com/"> &copy; Barth Sullivan Behr 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
+			<p id="copy"> <a href="http://barthcondren.com/"> &copy; Barth Condren 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
 				Advertising
 			</p>
 		</div>
