--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <link rel="shortcut icon" href="favicon.ico" />
 
-    <title>Barth Sullivan Behr</title>
+    <title>Barth Condren</title>
 
     <!-- Bootstrap core CSS -->
 
@@ -64,7 +64,7 @@
       <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-brand">
-          <a href="http://barthbehr.com/index.html"
+          <a href="http://barthcondren.com/index.html"
             ><img class="imagess" src="imgs/logo-no-address4.png"
           /></a>
         </div>
@@ -110,7 +110,7 @@
 
     <div class="container">
       <div class="row text-center">
-        <div id="inherit" class="col-md-4 ">
+        <div id="inherit" class="col-md-4">
           <div id="gridtext">
             <h2>Since 1928</h2>
 
@@ -128,7 +128,7 @@
 
         <div id="gridimg" class="col-md-4"></div>
 
-        <div id="inherit" class="col-md-4 ">
+        <div id="inherit" class="col-md-4">
           <a
             href="http://www3.ambest.com/DPSDirectorySearch/CompanyDisplay.aspx?dpid=15029&amp;nid=1"
           >
@@ -145,32 +145,32 @@
 
             <br />
 
-            <br />Since 1948 Barth Sullivan Behr has continuously met A.M.
-            Best&#39;s stringent standards for admission in the Best&#39;s
-            Directory of Recommended Insurance Attorneys, based upon
-            endorsements from the insurance industry.
+            <br />Since 1948 Barth Condren has continuously met A.M. Best&#39;s
+            stringent standards for admission in the Best&#39;s Directory of
+            Recommended Insurance Attorneys, based upon endorsements from the
+            insurance industry.
           </p>
         </div>
       </div>
 
       <div class="row text-center">
-        <div id="gridimg3" class="col-md-4 "></div>
+        <div id="gridimg3" class="col-md-4"></div>
 
-        <div id="inherit" class="col-md-4 ">
+        <div id="inherit" class="col-md-4">
           <div id="gridtext1">
             <p>
-              BARTH SULLIVAN BEHR concentrates its practice on the defense of
-              claims, with particular emphasis upon all types of motor vehicle
-              accident claims; premises liability claims against owners,
-              contractors and other responsible entities; environmental and
-              other toxic tort claims; workplace and construction accident
-              claims; products liability claims; professional liability claims;
-              and special investigation situations presented by suspected
-              fraudulent first and third-party claims, and misrepresentations at
-              both the underwriting and claim stages. We also are highly
-              experienced respecting insurance coverage evaluation and
-              litigation, in a broad variety of coverages. For additional
-              details of our practice, visit our
+              Barth Condren concentrates its practice on the defense of claims,
+              with particular emphasis upon all types of motor vehicle accident
+              claims; premises liability claims against owners, contractors and
+              other responsible entities; environmental and other toxic tort
+              claims; workplace and construction accident claims; products
+              liability claims; professional liability claims; and special
+              investigation situations presented by suspected fraudulent first
+              and third-party claims, and misrepresentations at both the
+              underwriting and claim stages. We also are highly experienced
+              respecting insurance coverage evaluation and litigation, in a
+              broad variety of coverages. For additional details of our
+              practice, visit our
               <a href="about.html">About</a> and
               <a href="practiceareas.html">Practice Areas</a> .
             </p>
@@ -185,9 +185,7 @@
       <footer>
         <div class="container">
           <p id="copy">
-            <a href="http://barthbehr.com/">
-              &copy; Barth Sullivan Behr 2020
-            </a>
+            <a href="http://barthcondren.com/"> &copy; Barth Condren 2020 </a>
             | <a href="disclaimer.html"> Disclaimer </a>| Attorney Advertising
           </p>
         </div>
