--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
-  <title>Barth Sullivan Behr</title>
+  <title>Barth Condren</title>
 
   <!-- Bootstrap core CSS -->
 
@@ -62,7 +62,7 @@
 
       <div class="navbar-brand">
 
-        <a href="http://barthbehr.com/index.html"><img class="imagess" src="imgs/logo-no-address4.png" /></a>
+        <a href="http://barthcondren.com/index.html"><img class="imagess" src="imgs/logo-no-address4.png" /></a>
 
       </div>
 
@@ -246,7 +246,7 @@
 
     <hr />
 
-    <p id="copy"> <a href="http://barthbehr.com/">&copy; Barth Sullivan Behr 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
+    <p id="copy"> <a href="http://barthcondren.com/">&copy; Barth Condren 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
       Advertising</p>
 
     </div>
