--- a/practiceareas.html
+++ b/practiceareas.html
@@ -21,7 +21,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
-  <title>Barth Sullivan Behr</title>
+  <title>Barth Condren</title>
 
   <!-- Bootstrap core CSS -->
 
@@ -64,7 +64,7 @@
 
       <div class="navbar-brand">
 
-        <a href="http://barthbehr.com/index.html">
+        <a href="http://barthcondren.com/index.html">
           <img class="imagess" src="imgs/logo-no-address4.png" />
         </a>
 
@@ -594,7 +594,7 @@
 
 
 
-  <p id="copy"> <a href="http://barthbehr.com/">&copy; Barth Sullivan Behr 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
+  <p id="copy"> <a href="http://barthcondren.com/">&copy; Barth Condren 2020 </a> | <a href="disclaimer.html"> Disclaimer </a>| Attorney
     Advertising</p>
 
   </div>
