added meta tags ook

--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Primary Meta Tags -->
+  <title>Barth Condren</title>
+  <meta name="title" content="Barth Condren">
+  <meta name="description" content="Professional attorneys serving Western New York since 1928">
 
-  <meta name="description" content="" />
-
-  <meta name="author" content="" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://barthcondren.com/">
+  <meta property="og:title" content="Barth Condren">
+  <meta property="og:description" content="Professional attorneys serving Western New York since 1928">
+  <meta property="og:image" content="imgs/logo-no-address4.png">
 
   <link rel="shortcut icon" href="favicon.ico" />
 
