--- a/attorneys.html
+++ b/attorneys.html
@@ -7,8 +7,17 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="" />
-	<meta name="author" content="" />
+	<!-- Primary Meta Tags -->
+	<title>Barth Condren</title>
+	<meta name="title" content="Barth Condren">
+	<meta name="description" content="Professional attorneys serving Western New York since 1928">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://barthcondren.com/">
+	<meta property="og:title" content="Barth Condren">
+	<meta property="og:description" content="Professional attorneys serving Western New York since 1928">
+	<meta property="og:image" content="imgs/logo-no-address4.png">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<title>Barth Condren</title>
@@ -17,12 +26,6 @@
 	<!-- Custom styles for this template -->
 	<link href="style.css" rel="stylesheet" />
 
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
-		<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113145122-9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
