--- a/index.html
+++ b/index.html
@@ -13,10 +13,23 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content="" />
+    <!-- Primary Meta Tags -->
+    <title>Barth Condren</title>
+    <meta name="title" content="Barth Condren" />
+    <meta
+      name="description"
+      content="Professional attorneys serving Western New York since 1928"
+    />
 
-    <meta name="author" content="" />
-
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://barthcondren.com/" />
+    <meta property="og:title" content="Barth Condren" />
+    <meta
+      property="og:description"
+      content="Professional attorneys serving Western New York since 1928"
+    />
+    <meta property="og:image" content="imgs/logo-no-address4.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
