update to attorneys

--- a/attorneys.html
+++ b/attorneys.html
@@ -108,7 +108,7 @@
 					367 Linwood Ave </br>
 					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
-					<a href="mailto:pbarth@barthbehr.com">pbarth@barthbehr.com</a></br>
+					<a href="mailto:pbarth@barthcondren.com">pbarth@barthcondren.com</a></br>
 				</div>
 				<div class="col-md-6">
 					<h4> Concentrations: </h4>
@@ -156,7 +156,7 @@
 					367 Linwood Ave </br>
 					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
-					<a href="mailto:dhamberger@barthbehr.com">dhamberger@barthbehr.com</a></br>
+					<a href="mailto:dhamberger@barthcondren.com">dhamberger@barthcondren.com</a></br>
 				</div>
 				<div class="col-md-6">
 					<h4> Concentrations: </h4>
@@ -199,7 +199,7 @@
 					367 Linwood Ave </br>
 					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
-					<a href="mailto:jcondren@barthbehr.com">jcondren@barthbehr.com</a></br>
+					<a href="mailto:jcondren@barthcondren.com">jcondren@barthcondren.com</a></br>
 				</div>
 				<div class="col-md-6">
 					<h4> Concentrations: </h4>
@@ -242,7 +242,7 @@
 					367 Linwood Ave </br>
 					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
-					<a href="mailto:dchimera@barthbehr.com">dchimera@barthbehr.com</a></br>
+					<a href="mailto:dchimera@barthcondren.com">dchimera@barthcondren.com</a></br>
 				</div>
 				<div class="col-md-6">
 					<h4> Concentrations: </h4>
@@ -256,6 +256,41 @@
 				<div class="col-md-6">
 					<h4> Affiliations: </h4>
 					Bar Association of Erie County, New York State Bar Association <br />
+				</div>
+				<div class="col-md-6">
+					<h4> Admissions: </h4>
+					State of New York <br />
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-2"><img class="headshot" src="imgs/breanna.jpg" alt="Breanna headshot"></div>
+		<div id="minheight" class="col-md-10">
+			<h2> Breanna C. Reilly </h2>
+			<h3> Associate Attorney </h3>
+			<p>Ms. Reilly is a 2016 Summa Cum Laude graduate of Daemen College, having received a B.S. in Business Administration with a minor in Pre-Law and Certificate in Paralegal Studies. She graduated from University at Buffalo Law School in 2019 and immediately took and passed the July 2019 New York State Bar Exam. Ms. Reilly was admitted to practice in January of 2020.
+			</p>
+			<div class="row">
+				<div class="col-md-6">
+					<h4> Contact: </h4>
+					Buffalo Office </br>
+					367 Linwood Ave </br>
+					Buffalo, New York 14209</br>
+					(716) 856-1300</br>
+					<a href="mailto:breilly@barthcondren.com">breilly@barthcondren.com</a></br>
+				</div>
+				<div class="col-md-6">
+					<h4> Concentrations: </h4>
+					Motor Vehicle Litigation  <br />
+					Insurance coverage and litigation <br />
+					Premises Liability <br />
+					Alternative Dispute Resolution <br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<h4> Affiliations: </h4>
+					New York State Bar Association, Bar Association of Erie County, Phi Alpha Delta Law Fraternity <br />
 				</div>
 				<div class="col-md-6">
 					<h4> Admissions: </h4>
