added some shit

--- a/attorneys.html
+++ b/attorneys.html
@@ -140,6 +140,50 @@
 			</div>
 		</div>
 
+		<div class="col-md-2"><img class="headshot" src="imgs/johncondren.jpg" alt="John Condren headshot"></div>
+		<div id="minheight" class="col-md-10">
+			<h2>John R. Condren</h2>
+			<h3> Partner </h3>
+			<p>Mr. Condren is an extensively experienced trail attorney in the areas of insurance defense litigation and insurance coverage.   He is a 1988 graduate of the State University of New York at Buffalo, having received a B.A. in Psychology.   In 1992, Mr. Condren received his J.D. from the University of Toledo College of Law in Toledo, Ohio.  For upwards of 25 years, he has regularly appeared in the New York State and Federal District Courts at the trial and appellate levels and has taken numerous cases to verdict over the course of his career.   He is also a frequent lecturer and presenter on topics involving personal injury litigation and insurance coverage.  
+			</p>
+			<div class="row">
+				<div class="col-md-6">
+					<h4> Contact: </h4>
+					Buffalo Office </br>
+					367 Linwood Ave </br>
+					Buffalo, New York 14209</br>
+					(716) 856-1300</br>
+					<a href="mailto:jcondren@barthcondren.com">jcondren@barthcondren.com</a></br>
+				</div>
+				<div class="col-md-6">
+					<h4> Concentrations: </h4>
+					Motor Vehicle Litigation  <br />
+					Insurance coverage and litigation <br />
+					Premises liability litigation <br />
+					Trial and appellate litigation  <br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<h4> Affiliations: </h4>
+					New York State Bar Association – Torts, Insurance and Compensation Law Section <br />
+					Bar Association of Erie County – Negligence Committee <br />
+					Western New York Trial Lawyers Association  <br />
+					Defense Trial Lawyers Association of Western New York <br />
+					Defense Association of New York, Inc. <br />
+					Buffalo Claims Association <br />
+					The 11 Day Power Play, Inc. – Executive Board Member <br />
+				</div>
+				<div class="col-md-6">
+					<h4> Admissions: </h4>
+					State of New York </br>
+					U.S. District Court, Western District of New York  </br>
+					U.S. District Court, Northern District of New York  </br>
+					U.S Supreme Court </br>
+				</div>
+			</div>
+		</div>
+
 		<div class="col-md-2"><img class="headshot" src="imgs/DPHw.jpg" alt="Doug Hamberger headshot"></div>
 		<div id="minheight" class="col-md-10">
 			<h2> Douglas P. Hamberger </h2>
@@ -185,49 +229,6 @@
 			</div>
 		</div>
 
-
-		<div class="col-md-2"><img class="headshot" src="imgs/johncondren.jpg" alt="John Condren headshot"></div>
-		<div id="minheight" class="col-md-10">
-			<h2>John R. Condren</h2>
-			<h3> Senior Trial Attorney </h3>
-			<p>Mr. Condren is a Senior Trial Attorney with extensive experience in the areas of insurance defense litigation and insurance coverage.   He is a 1988 graduate of the State University of New York at Buffalo, having received a B.A. in Psychology.   In 1992, Mr. Condren received his J.D. from the University of Toledo College of Law in Toledo, Ohio.  For upwards of 25 years, he has regularly appeared in the New York State and Federal District Courts at the trial and appellate levels and has taken numerous cases to verdict over the course of his career.   He is also a frequent lecturer and presenter on topics involving personal injury litigation and insurance coverage.  
-			</p>
-			<div class="row">
-				<div class="col-md-6">
-					<h4> Contact: </h4>
-					Buffalo Office </br>
-					367 Linwood Ave </br>
-					Buffalo, New York 14209</br>
-					(716) 856-1300</br>
-					<a href="mailto:jcondren@barthcondren.com">jcondren@barthcondren.com</a></br>
-				</div>
-				<div class="col-md-6">
-					<h4> Concentrations: </h4>
-					Motor Vehicle Litigation  <br />
-					Insurance coverage and litigation <br />
-					Premises liability litigation <br />
-					Trial and appellate litigation  <br />
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<h4> Affiliations: </h4>
-					New York State Bar Association – Torts, Insurance and Compensation Law Section <br />
-					Bar Association of Erie County – Negligence Committee <br />
-					Western New York Trial Lawyers Association  <br />
-					Defense Trial Lawyers Association of Western New York <br />
-					Defense Association of New York, Inc. <br />
-					Buffalo Claims Association <br />
-					The 11 Day Power Play, Inc. – Executive Board Member <br />
-				</div>
-				<div class="col-md-6">
-					<h4> Admissions: </h4>
-					U.S. District Court, Western District of New York
-					U.S. District Court, Northern District of New York
-					Has appeared Pro Hac Vice in a number of other jurisdictions
-				</div>
-			</div>
-		</div>
 
 		<div class="col-md-2"><img class="headshot" src="imgs/dominic.jpg" alt="Dominic Chimera headshot"></div>
 		<div id="minheight" class="col-md-10">
