--- a/attorneys.html
+++ b/attorneys.html
@@ -144,7 +144,7 @@
 		<div id="minheight" class="col-md-10">
 			<h2>John R. Condren</h2>
 			<h3> Partner </h3>
-			<p>Mr. Condren is an extensively experienced trail attorney in the areas of insurance defense litigation and insurance coverage.   He is a 1988 graduate of the State University of New York at Buffalo, having received a B.A. in Psychology.   In 1992, Mr. Condren received his J.D. from the University of Toledo College of Law in Toledo, Ohio.  For upwards of 25 years, he has regularly appeared in the New York State and Federal District Courts at the trial and appellate levels and has taken numerous cases to verdict over the course of his career.   He is also a frequent lecturer and presenter on topics involving personal injury litigation and insurance coverage.  
+			<p>Mr. Condren is an extensively experienced trial attorney in the areas of insurance defense litigation and insurance coverage.   He is a 1988 graduate of the State University of New York at Buffalo, having received a B.A. in Psychology.   In 1992, Mr. Condren received his J.D. from the University of Toledo College of Law in Toledo, Ohio.  For upwards of 25 years, he has regularly appeared in the New York State and Federal District Courts at the trial and appellate levels and has taken numerous cases to verdict over the course of his career.   He is also a frequent lecturer and presenter on topics involving personal injury litigation and insurance coverage.  
 			</p>
 			<div class="row">
 				<div class="col-md-6">
