updates to barthbehr

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               The cornerstone of our practice philosophy has been to expedite
               the handling of litigation matters by taking an aggressive
               approach to our cases, being ever alert for opportunities to
-              quickly resolve our client’s exposure via summary judgement and
+              quickly resolve our client’s exposure via summary judgment and
               other dispositive motions.
             </p>
           </div>
