--- a/practiceareas.html
+++ b/practiceareas.html
@@ -568,6 +568,45 @@
 
                 <li> Property Damage Claims </li>
 
+                <li>Municipal and School District Liability</li>
+
+                <li>Recreational and Sports League Liability </li>
+
+              </ul>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="panel panel-default">
+
+          <div class="panel-heading">
+
+            <h4 class="panel-title">
+
+              <a data-toggle="collapse" data-parent="#accordion2" href="#collapsenine" class='collapsed'>
+
+          Employment Law
+
+        </a>
+
+            </h4>
+
+          </div>
+
+          <div id="collapsenine" class="panel-collapse collapse  ">
+
+            <div class="panel-body">
+
+              <ul>
+
+                <li> Wrongful Termination</li>
+                <li> Workplace Discrimination</li>
+                <li> Sexual Harassment</li>
+                <li> EEOC, NLRB, NYSDHR Charges</li>
+
               </ul>
 
             </div>
