--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
 
 						<strong>Email:</strong>
 
-						<a href="mailto:info@barthbehr.com">info@barthbehr.com</a>
+						<a href="mailto:jcondren@barthcondren.com">jcondren@barthcondren.com</a>
 
 						<br />
 
