--- a/attorneys.html
+++ b/attorneys.html
@@ -237,6 +237,43 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-md-2"><img class="headshot" src="imgs/jcs.jpg" alt="Jeffery Sendziak headshot"></div>
+		<div id="minheight" class="col-md-10">
+			<h2> Jeffrey C. Sendziak, Esq </h2>
+			<h3> Senior Trial Attorney </h3>
+			<p>Mr. Sendziak is an experienced trial and appellate attorney. He is a 1986 graduate of Canisus College having received a B.A. in Political Science. Mr. Sendziak received his J.D. from the State University of New York at Buffalo Law School in 1989. Since 1990 he has litigated personal injury claims including at the trial and appellate levels in New York State and Federal District Courts.  </p>
+			<div class="row">
+				<div class="col-md-6">
+					<h4> Contact: </h4>
+					Buffalo Office </br>
+					367 Linwood Ave </br>
+					Buffalo, New York 14209</br>
+					(716) 856-1300</br>
+					<a href="mailto:pvincent@barthcondren.com">pvincent@barthcondren.com</a></br>
+				</div>
+				<div class="col-md-6">
+					<h4> Concentrations: </h4>
+					Motor Vehicle Litigation <br />
+					Labor Law <br />
+					Premises liability litigation <br />
+					Trial and appellate litigation <br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<h4> Affiliations: </h4>
+					New York State Bar Association </br>
+					Bar Association of Erie County </br>
+					Defense Trial Lawyers Association of Western New York </br>
+				</div>
+				<div class="col-md-6">
+					<h4> Admissions: </h4>
+					State of New York </br>
+					U.S. District Court, Western District of New York</br>
+
+				</div>
+			</div>
+		</div>
 		<div class="col-md-2"></div>
 		<div class="col-md-10">
 			<h2> Richard Scholnick, Esq. </h2>
