--- a/attorneys.html
+++ b/attorneys.html
@@ -208,7 +208,7 @@
 					367 Linwood Ave </br>
 					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
-					<a href="mailto:pvincent@barthcondren.com">pvincent@barthcondren.com</a></br>
+					<a href="mailto:jsendziak@barthcondren.com.">jsendziak@barthcondren.com.</a></br>
 				</div>
 				<div class="col-md-6">
 					<h4> Concentrations: </h4>
@@ -249,7 +249,7 @@
 					367 Linwood Ave </br>
 					Buffalo, New York 14209</br>
 					(716) 856-1300</br>
-					<a href="mailto:pvincent@barthcondren.com">pvincent@barthcondren.com</a></br>
+					<a href="mailto:pvincent@barthcondren.com">jsendziak@barthcondren.com.</a></br>
 				</div>
 				<div class="col-md-6">
 					<h4> Concentrations: </h4>
